--- a/src/style.css
+++ b/src/style.css
@@ -23,6 +23,10 @@ a:hover, a:focus {
   text-decoration: underline;
 }
 
+#skip-link {
+  position: absolute;
+}
+
 /**
  * This file was first created using the Yeoman generator
  * generator-hchiam-learning:
